2017-05-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Set $size to -1 if it is 0. 0 means nothing,
	  -1, means everything

2017-05-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3-device.c:use_s3_multi_delete default to 1 for SWIFT-3
	* device-src/s3.c (s3_multi_delete): Handle S3_API_SWIFT_3

2017-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Chunker/Controller.pm: Send SHM_NAME or PORT only if we
	  have a header_port
	* perl/Amanda/Report.pm: Chunker without dumper is a failure
	* perl/Amanda/Report/human.pm: Chunker without dumper is a FAILED
	* server-src/driver.c: Call dumper_chunker_result if chunker failand
	  dumper not yet started
	* server-src/driverio.h (struct dumper_s): Add sent_command
	* xfer-src/element-glue.c (do_directtcp_listen): Correctly print error
	  from resolve_hostname()

2017-05-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c (amjson_s, parse_json_primitive,
	  json_parse_string): Move declaration to amjson.h
	* common-src/amjson.h: Add declaration
	* common-src/ammessage.c: Use amjson type and functions

2017-05-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/senddiscover.c: s/read/read/fully/

2017-05-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Parse HTML error from SWIFT_3
	* device-src/s3.h: Add NotFound error

2017-05-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c, common-src/security-util.c,
	  recover-src/extract_list.c: Fix bug found by coverity

2017-05-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Use a new tape if it lost less
	  tape space
	* installcheck/tape_action.pl: Add tests

2017-05-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (wait_children): Use smaller sleep time

2017-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>