@@ -1,3 +1,6 @@
+2017-06-05  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* device-src/xfer-dest-taper-splitter.c: Fix taper hang
+
 2017-05-19  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Vault.pm: Set $size to -1 if it is 0. 0 means nothing,
 	  -1, means everything
